# bernerspace

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.json  docker-compose.yml  generate_jwt.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0097a46f2bcc_create_oauth_tokens_table.py  cbe457d6078c_add_integration_type_to_oauth_tokens.py
core/: main.py  requirements.txt
core/src/config/: auth.py  config.py
core/src/models/: projects.py
core/src/routes/: auth.py  logs.py  projects.py  uploads.py
docs/: README_DB.md
docs/slack/: tools.md
src/core/: storeage_manager.py
src/middleware/: auth.py
src/models/: oauth_token.py
src/services/google/: auth_tools.py  calender_tools.py  gmail_tools.py  route.py  service.py  tools.py
src/services/google/schemas/: google.py
src/services/slack/: route.py  service.py  slack_service.py  tools.py
src/services/slack/schemas/: slack.py
src/utils/: config_handler.py  crypto.py  database.py  env_handler.py
ts/cli/: .gitignore  package.json  tsconfig.json
ts/cli/scripts/: prepend-shebang.js  setup.sh
ts/cli/src/: app.ts  main.ts
ts/cli/src/commands/: details.ts  init.ts  logout.ts
ts/cli/src/config/: api.ts
ts/cli/src/types/: inquirer.ts
ts/cli/src/utils/: config.ts  detectLanguage.ts  tar.ts
